--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,8 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "api/$1"
+      "src": "/api/generate",
+      "dest": "api/generate.js"
     },
     {
       "src": "/(.*)",
